--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,18 +8,6 @@ body {
   }
 }
 
-.banner {
-  color: white;
-  text-shadow: 1px 2px rgba(0,0,0,1);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height:40vh;
-  background-image: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6');
-  background-size: cover;
-}
-
 #search{
   font-family: 'Nanum Gothic Coding', monospace;
 }
